// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Config Agent proto for gRPC communications from controllers.
syntax = "proto3";

package protos;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/GoogleCloudPlatform/elcarro-oracle-operator/oracle/pkg/agents/pitr/protos;protos";

service PITRAgent {
  rpc Status(StatusRequest) returns (StatusResponse) {}
}

message StatusRequest {}

message Instant {
  google.protobuf.Timestamp time = 1;
  string scn = 2;
  string incarnation = 3;
}

message Range {
  Instant start = 1;
  Instant end = 2;
}

message StatusResponse {
  repeated Range recovery_windows = 1;
}